--- a/StartingCode-withLights.html
+++ b/StartingCode-withLights.html
@@ -68,7 +68,7 @@
 			dirLight.shadow.mapSize.height = 1024;
 
 
-			// GROUND
+			// GROUND test
 			var groundGeo = new THREE.PlaneBufferGeometry( 10000, 10000 );
 			var groundMat = new THREE.MeshPhongMaterial( { color: 0xffffff, specular: 0x050505 } );
 			groundMat.color.setHSL( 0.095, 1, 0.75 );
